Resolves #2: create an API to update user's information
