# src/dto/user.dto.ts
@@ -3,3 +3,10 @@ export interface CreateUserDto {
     email: string;
     password: string;
 }
+
+export interface UpdateUserDto {
+    id: number
+    name: string;
+    email: string;
+    password: string;
+}
